# yFinance

./: README.md  pyproject.toml
yfinance/: main.py  stock_utils.py
